CMDBuild 2.4.3 (released YYYY/MM/DD)


NEW FEATURES

 * Graduate thematic layer on quantity values

 * Menu on thematism for control the layers layout

 * Gis: remove feature in editing

 * Print dialog on Relations Graph: current card and relations report

 * "Class" and "Activity" must not be visible within translations table and CSV export

 * NextActivitySubsetId workflow metadata implementation

 * Widget NavigationTree: destination class description added to tree nodes


FIXES

 * Gis: Fault on Geo Server Layers

 * AdditionalActivityLabel metadata not correctly managed if relative attribute is not displayed in grid

 * Origin and destination comboboxes no more searchable in domains UI

 * OpenReport widget error on RTF or ODT format print

 * DataView SQL grid print button doesn't print report

 * ReferenceFields store load errors while sending not resolved CQL strings

 * ActivitySubsetId workflow metadata typo

 * Classes UI history tab error

 * Wrong activity selection after going on completed state

 * Workflow attachment tab translation variable error

 * Activities not sorted

 * GIS configurations problems while using comma as decimal separator

 * Enabled classes errors while creating relations on super-classes recursive domain

 * Classes tab notes doesn't display data

 * Error on runtime filter apply on a process





CMDBuild 2.4.2 (released 2016/10/18)


NEW FEATURES

 * "Show language choice" configuration not readed at login page

 * Advanced filters management from REST web services

 * Notification of errors by email

 * Performance improvements to queries

 * Preselection of workflow activities

 * Simple filter support for processes routes

 * Client performance improvements

 * Metadata for functions through REST interface

 * Added Greek translation

 * Management of geometric attributes through REST API

 * Management of relation attributes through SOAP API

 * Information about the filter of the nodes of domain trees through REST API
