@@ -1144,6 +1144,7 @@
 	"popupPercentageWidth": "العرض بالمئوي للنافذة المنبثقة",
 	"popupWindows": "النوافذ المنبثقة",
 	"port": "المنفذ",
+	"position": "<em>Position</em>",
 	"preselectIfUnique": "انتقاء مسبق إذا فريد",
 	"presets": "<em>Presets</em>",
 	"previous": "السابق",
