@@ -1144,6 +1144,7 @@
 	"popupPercentageWidth": "Popup percentage width",
 	"popupWindows": "Popup windows",
 	"port": "Port",
+	"position": "Position",
 	"preselectIfUnique": "Preselect if unique",
 	"presets": "Presets",
 	"previous": "Previous",
