@@ -1144,6 +1144,7 @@
 	"popupPercentageWidth": "Ancho porcentual ventana popup",
 	"popupWindows": "Ventana popup",
 	"port": "Puerto",
+	"position": "<em>Position</em>",
 	"preselectIfUnique": "Preseleccionar si es único",
 	"presets": "<em>Presets</em>",
 	"previous": "Anterior",
