@@ -1144,6 +1144,7 @@
 	"popupPercentageWidth": "Largeur de la boîte de dialogue en pourcentage",
 	"popupWindows": "Boîte de dialogue",
 	"port": "Port",
+	"position": "<em>Position</em>",
 	"preselectIfUnique": "Préselectionner si unique",
 	"presets": "<em>Presets</em>",
 	"previous": "Précédent",
