@@ -1144,6 +1144,7 @@
 	"popupPercentageWidth": "Popup százalékos szélesség",
 	"popupWindows": "Popup ablak",
 	"port": "Port",
+	"position": "<em>Position</em>",
 	"preselectIfUnique": "Előszelektálás ha egyedi",
 	"presets": "<em>Presets</em>",
 	"previous": "Előző",
