@@ -1144,6 +1144,7 @@
 	"popupPercentageWidth": "Percentagem comprimento janela popup",
 	"popupWindows": "Janelas popup",
 	"port": "Porta",
+	"position": "<em>Position</em>",
 	"preselectIfUnique": "Pré-selecionar se for único",
 	"presets": "Predefinições",
 	"previous": "Anterior",
