@@ -1144,6 +1144,7 @@
 	"popupPercentageWidth": "Ширина всплывающего окна в процентах",
 	"popupWindows": "Всплывающие окна",
 	"port": "Порт",
+	"position": "<em>Position</em>",
 	"preselectIfUnique": "<em>Preselect if unique</em>",
 	"presets": "<em>Presets</em>",
 	"previous": "Назад",
