@@ -1144,6 +1144,7 @@
 	"popupPercentageWidth": "Ширина (у процентима) popup прозора",
 	"popupWindows": "popup прозор",
 	"port": "Порт",
+	"position": "<em>Position</em>",
 	"preselectIfUnique": "<em>Preselect if unique</em>",
 	"presets": "<em>Presets</em>",
 	"previous": "Претходна",
