@@ -1144,6 +1144,7 @@
 	"popupPercentageWidth": "弹出百分比宽度",
 	"popupWindows": "弹出窗口",
 	"port": "端口",
+	"position": "<em>Position</em>",
 	"preselectIfUnique": "如果唯一，可以预选",
 	"presets": "<em>Presets</em>",
 	"previous": "上一个",
